5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4145/executions/1637_2445.log
== TEST (2019-04-11 10:29:55) 
-- CODE:
m = float(input("modelo de conversao: "))
t = float(input("temperatura: "))

if(t==c):
	t = 5/9*(f - 32)
	print(f)
else:
	c = 5/9*(t - 32)
	print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    m = float(input())
ValueError: could not convert string to float: 'C'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:30:11) 
-- CODE:
m = (input("modelo de conversao: "))
t = float(input("temperatura: "))

if(t==c):
	t = 5/9*(f - 32)
	print(f)
else:
	c = 5/9*(t - 32)
	print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(t==c):
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:30:32) 
-- CODE:
m = (input("modelo de conversao: "))
t = float(input("temperatura: "))

if(m == c):
	t = 5/9*(f - 32)
	print(f)
else:
	c = 5/9*(t - 32)
	print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(m == c):
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:31:20) 
-- CODE:
m = input("modelo de conversao: ")
t = float(input("temperatura: "))

if(m == c):
	t = 5/9*(f - 32)
	print(f)
else:
	c = 5/9*(t - 32)
	print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(m == c):
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:32:47) 
-- CODE:
m = input("modelo de conversao: ")
t = float(input("temperatura: "))

if(m.lower() == c):
	t = 5/9*(f - 32)
	print(f)
else:
	c = 5/9*(t - 32)
	print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(m.lower() == c):
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:34:27) 
-- CODE:
m = input("modelo de conversao: ")
t = float(input("temperatura: "))

if(m.lower() == c):
	t = 5/9*(f - 32)
	print(f)
else:
	c = 5/9*(t - 32)
	print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(m.lower() == c):
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:37:04) 
-- CODE:
m = input("modelo de conversao: ")
t = float(input("temperatura: "))

if(m.lower() == c):
	f = 9*t/5 + 32 
	print(f)
else:
	c = 5/9*(t - 32)
	print(c)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(m.lower() == c):
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:38:50) 
-- CODE:
m = input("modelo de conversao: ")
t = float(input("temperatura: "))

if(m.lower() == c):
	f = 9*t/5 + 32 
	print(f)
else:
	c = 5/9*(t - 32)
	print(c)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(m.lower() == c):
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:39:42) 
-- CODE:
m = input("modelo de conversao: ")
t = float(input("temperatura: "))

if(m.lower() == "c"):
	f = 9*t/5 + 32 
	print(f)
else:
	c = 5/9*(t - 32)
	print(c)
	
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:40:00) 
-- CODE:
m = input("modelo de conversao: ")
t = float(input("temperatura: "))

if(m.lower() == "c"):
	f = 9*t/5 + 32 
	print(f)
else:
	c = 5/9*(t - 32)
	print(c)
	
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:40:09) 
-- CODE:
m = input("modelo de conversao: ")
t = float(input("temperatura: "))

if(m.lower() == "c"):
	f = 9*t/5 + 32 
	print(f)
else:
	c = 5/9*(t - 32)
	print(c)
	
-- EXECUTION TIME:
0.161555
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
